--- a/style.css
+++ b/style.css
@@ -76,6 +76,42 @@ button {
   margin-left: 30px;
 }
 
+.my-work {
+  display: block;
+}
+
+.my-work-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+}
+
+.my-work-card {
+  display: flex;
+  flex-wrap: wrap;
+  z-index: 1;
+  width: 30vw;
+  height: 80vh;
+  padding: 0 1.5vw;
+  overflow: hidden;
+  background-color: var(--first-color);
+  border-radius: 20px;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+.my-work-card img {
+  z-index: 1;
+  width: 100%;
+  object-fit: cover;
+  vertical-align: middle;
+  transform-origin: center;
+  pointer-events: none;
+}
+
+
+
 .second-carousel-card:last-child {
   counter-increment: count;
   position: absolute;
