--- a/style.css
+++ b/style.css
@@ -99,7 +99,14 @@ button {
   border-radius: 20px;
   margin-right: 30px;
   margin-left: 30px;
+  transition: 0.5s;
 }
+
+.my-work-card:hover {
+  background-color:  rgb(82, 18, 142);
+}
+
+
 
 .my-work-card img {
   z-index: 1;
