--- a/style.css
+++ b/style.css
@@ -100,7 +100,6 @@ button {
   border-radius: 20px;
   margin-right: 30px;
   margin-left: 30px;
-  transition: 0.5s;
 }
 
 .my-work-card h3 {
@@ -524,12 +523,16 @@ textarea {
 
 
 @media (max-width: 1050px) {
+  .technology {
+    margin-top: 20px;
+  }
+
   .my-work-div {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 40px;
+    
   }
   .my-work-card {
     margin-bottom: 40px;
@@ -569,7 +572,7 @@ textarea {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    height: 90vh;
+    height: 100vh;
     padding-top: 40px;
     padding-bottom: 40px;
   }
