change three d graphic to svg because it was not scaling good on mobile

--- a/style.css
+++ b/style.css
@@ -522,9 +522,17 @@ textarea {
   background-color: rgb(21, 21, 21);
 }
 
-
+svg {
+  width: 50vw;
+  height: 50vh;
+}
 
 @media (max-width: 1050px) {
+  svg {
+    width: 80vw;
+    height: 50vh;
+  }
+
   .technology {
     margin-top: 20px;
   }
