--- a/style.css
+++ b/style.css
@@ -102,7 +102,11 @@ button {
   margin-left: 30px;
 }
 
-.my-work-card h3 {
+h5{ 
+  font-size: 2em;
+}
+
+.my-work-card h2 {
   margin: 0 auto;
   padding-top: 20px;
   text-align: center;
@@ -155,6 +159,10 @@ button {
   border-radius: 20px;
   margin-right: 30px;
   margin-left: 30px;
+}
+
+.bold {
+  font-weight: bold;
 }
 
 .second-carousel-card img {
@@ -289,7 +297,7 @@ canvas { width:50vw; height: 50vh; display: block; }
   width: 100%;
 }
 
-.second-carousel-card h3 {
+.second-carousel-card h2 {
   padding-top: 10px;
   text-align: center;
 }
