--- a/style.css
+++ b/style.css
@@ -76,6 +76,30 @@ button {
   margin-left: 30px;
 }
 
+.main-header {
+  text-align: center;
+  font-size: 2em;
+  padding-top: 20px;
+  font-weight: bold;
+}
+
+.second-header {
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  font-size: 1.4em;
+
+}
+
+.second-header-center {
+  font-weight: bold;
+  text-align: left;
+  margin-bottom: 20px;
+  font-size: 1.4em;
+
+}
+
 .my-work {
   display: block;
 }
@@ -680,6 +704,18 @@ svg {
 }
 
 @media (max-width: 700px) {
+  .main-header {
+    text-align: center;
+    font-size: 1.5em;
+    padding-top: 20px;
+  }
+
+  .second-header {
+    text-align: center;
+    font-size: 1.2em;
+    padding-top: 20px;
+  }
+
   .footer {
     padding: 40px;
   }
