--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Orbitron', sans-serif;
+  font-family: "Orbitron", sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -39,8 +39,6 @@ button {
   height: 75vh !important;
 }
 
-
-
 .carousel-padding {
   padding: 20px;
 }
@@ -56,7 +54,6 @@ button {
   color: #ffffff;
   font-size: 3vw;
 }
-
 
 .second-carousel-card {
   display: flex;
@@ -89,7 +86,6 @@ button {
   margin-bottom: 20px;
   margin-top: 20px;
   font-size: 1.4em;
-
 }
 
 .second-header-center {
@@ -97,7 +93,6 @@ button {
   text-align: left;
   margin-bottom: 20px;
   font-size: 1.4em;
-
 }
 
 .my-work {
@@ -133,7 +128,7 @@ button {
   width: 100%;
 }
 
-h5{ 
+h5 {
   font-size: 2em;
 }
 
@@ -150,8 +145,7 @@ h5{
 }
 
 .icon-github-circled:hover {
-  color:  rgb(21, 21, 21);
-  
+  color: rgb(21, 21, 21);
 }
 
 .icon-github-circled.large {
@@ -160,10 +154,8 @@ h5{
 }
 
 .icon-github-circled.large:hover {
-  color:  rgb(21, 21, 21);
- 
+  color: rgb(21, 21, 21);
 }
-
 
 .icon-github-circled.black {
   color: rgb(0, 0, 0);
@@ -176,15 +168,13 @@ h5{
 }
 
 .icon-linkedin:hover {
-  color:  rgb(21, 21, 21);
+  color: rgb(21, 21, 21);
   transition: 0.8s;
 }
 
 .my-work-card:hover {
-  background-color:  rgb(82, 18, 142);
+  background-color: rgb(82, 18, 142);
 }
-
-
 
 .my-work-card img {
   z-index: 1;
@@ -194,8 +184,6 @@ h5{
   transform-origin: center;
   pointer-events: none;
 }
-
-
 
 .second-carousel-card:last-child {
   counter-increment: count;
@@ -242,8 +230,11 @@ h5{
   width: 100%;
 }
 
-
-canvas { width:50vw; height: 50vh; display: block; }
+canvas {
+  width: 50vw;
+  height: 50vh;
+  display: block;
+}
 
 #bar {
   height: 10vh;
@@ -252,19 +243,16 @@ canvas { width:50vw; height: 50vh; display: block; }
   border-bottom: 5px solid var(--first-color);
 }
 
-
 .test-my-work {
   font-size: 72px;
   position: static;
   white-space: nowrap;
-  
 }
 
 .technology-animation {
   font-size: 72px;
   position: static;
   white-space: nowrap;
-  
 }
 
 #test-work {
@@ -277,20 +265,20 @@ canvas { width:50vw; height: 50vh; display: block; }
   margin-bottom: 20px;
 }
 
-.styling-1{
+.styling-1 {
   color: var(--first-color);
 }
 
-.styling-2{
+.styling-2 {
   font-weight: bold;
 }
 
-.styling-3{
+.styling-3 {
   color: var(--first-color);
   text-decoration: underline;
 }
 
-.styling-4{
+.styling-4 {
   font-style: italic;
   font-weight: lighter;
 }
@@ -299,7 +287,6 @@ canvas { width:50vw; height: 50vh; display: block; }
   color: var(--first-color);
   font-weight: bold;
   text-decoration: dotted;
-
 }
 
 .styling-6 {
@@ -311,7 +298,6 @@ canvas { width:50vw; height: 50vh; display: block; }
   font-weight: lighter;
 }
 
-
 .carousel-footer {
   margin: 10px;
   display: flex;
@@ -320,14 +306,12 @@ canvas { width:50vw; height: 50vh; display: block; }
   width: 100%;
 }
 
-
-.carousel-footer-logo{
+.carousel-footer-logo {
   width: 4vw;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
- 
 }
 
 .white-github-logo {
@@ -355,20 +339,20 @@ canvas { width:50vw; height: 50vh; display: block; }
   text-align: center;
 }
 
-.carousel-footer-logo img{
+.carousel-footer-logo img {
   width: 100%;
 }
 
 .bar-sub {
   color: white;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .bar-sub a {
   color: white;
 }
 
-#portfolio{
+#portfolio {
   display: none;
   margin-bottom: 200px;
   margin-top: 100px;
@@ -379,19 +363,17 @@ canvas { width:50vw; height: 50vh; display: block; }
 }
 
 .frontpage {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
 }
 
-
 .three-d {
-  
   width: 50vw;
   height: 50vh;
   text-align: center;
-  pointer-events: none; 
+  pointer-events: none;
 }
 
 .name {
@@ -413,19 +395,15 @@ canvas { width:50vw; height: 50vh; display: block; }
 }
 
 .name p {
-  overflow: hidden; 
-  border-right: .15em solid var(--first-color);
-  letter-spacing: .15em;
-  animation: 
-  typing 3.5s steps(40, end),
-  blink-caret .75s step-end infinite;
+  overflow: hidden;
+  border-right: 0.15em solid var(--first-color);
+  letter-spacing: 0.15em;
+  animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
   margin: 0 auto;
 }
 
-
 .hide {
   display: none;
- 
 }
 
 /* skills sector */
@@ -452,8 +430,6 @@ canvas { width:50vw; height: 50vh; display: block; }
   height: 50vh;
 }
 
-
-
 .subsection-2 {
   display: flex;
   justify-content: space-around;
@@ -465,31 +441,27 @@ canvas { width:50vw; height: 50vh; display: block; }
   display: flex;
   justify-content: center;
   align-items: center;
- width: 150px;
- height: 150px;
-background-color: var(--first-color);
-border-radius: 20%;
-
+  width: 150px;
+  height: 150px;
+  background-color: var(--first-color);
+  border-radius: 20%;
 }
 
-
-.technology-container{
+.technology-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 40vh;
 }
 
-.text{
+.text {
   width: 60vw;
   padding: 20px;
 }
 
-
 .technology-working {
   text-align: center;
   width: 80%;
-
 }
 
 .technology-wannabe {
@@ -501,7 +473,7 @@ border-radius: 20%;
   border-radius: 20px;
 }
 
-.technology{
+.technology {
   margin-top: 100px;
 }
 
@@ -524,12 +496,15 @@ ul {
 }
 
 .contact-info {
+  display: flex;
+  justify-content: space-between;
   width: 30vw;
-  border-right: 1px solid white;
+  gap: 20px;
   margin-bottom: 60px;
 }
 
-input[type=text], select {
+input[type="text"],
+select {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -539,7 +514,7 @@ input[type=text], select {
   box-sizing: border-box;
   background-color: white;
 }
-input[type=submit] {
+input[type="submit"] {
   width: 100%;
   border: 2px solid rgb(21, 21, 21);
   background-color: white;
@@ -566,13 +541,11 @@ textarea {
   background-color: white;
   font-size: 16px;
   resize: none;
-  
 }
 
 .footer {
   height: 20vh;
-  border-top : solid 1px white;
-  background-color:rgb(43, 0, 84);
+  background-color: rgb(43, 0, 84);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -592,7 +565,7 @@ svg {
 @media (max-width: 1050px) {
   svg {
     width: 90%;
-  height: 90%;
+    height: 90%;
   }
 
   .technology {
@@ -604,7 +577,6 @@ svg {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
   }
   .my-work-card {
     margin-bottom: 40px;
@@ -612,20 +584,17 @@ svg {
     height: 80vh;
   }
 
-
   .second-carousel-card {
     width: 40vw !important;
     height: 100% !important;
   }
 
-  .technology-container{
+  .technology-container {
     margin-bottom: 40px;
   }
 
-
-  .technology-wannabe  {
+  .technology-wannabe {
     width: 90vw;
-    
   }
 
   .carousel-footer-logo {
@@ -636,8 +605,6 @@ svg {
     background-color: rgb(21, 21, 21);
     width: 100%;
   }
-
-  
 
   .contact {
     display: flex;
@@ -666,7 +633,6 @@ svg {
   .technology-container {
     display: flex;
     flex-wrap: wrap;
-    
   }
 
   .test-my-work {
@@ -685,12 +651,16 @@ svg {
     justify-content: center;
     align-items: center;
     height: 90vh;
-}
-  .name {
-      width: 90vw;
-      padding-right: 40px;
   }
-  canvas { width:90vw; height: 50vh; display: block; }
+  .name {
+    width: 90vw;
+    padding-right: 40px;
+  }
+  canvas {
+    width: 90vw;
+    height: 50vh;
+    display: block;
+  }
 
   .three-d {
     display: flex;
@@ -699,7 +669,7 @@ svg {
     width: 80vw;
     height: 50vh;
     text-align: center;
-    pointer-events: none; 
+    pointer-events: none;
   }
 }
 
@@ -730,7 +700,6 @@ svg {
     font-size: 16px;
     border-radius: 10px;
   }
-  
 
   .second-carousel-card {
     width: 60vw !important;
@@ -742,18 +711,15 @@ svg {
   }
 }
 
-
 @media (max-width: 500px) {
   .second-carousel-card {
     width: 80vw !important;
     height: 100% !important;
   }
-  
+
   .carousel-footer-logo {
     width: 20vw;
   }
-
- 
 }
 
 @media (max-width: 400px) {
