--- a/style.css
+++ b/style.css
@@ -12,14 +12,12 @@ body {
   font-size: 16px;
 }
 
-/* i need to go normal way later */
-
 :root {
   --first-color: rgb(63, 2, 120);
 }
 
 button {
-  background-color: var(--first-color); /* Green */
+  background-color: var(--first-color);
   border: none;
   color: white;
   padding: 12px 28px;
@@ -28,6 +26,11 @@ button {
   display: inline-block;
   font-size: 16px;
   border-radius: 5px;
+}
+
+.typed-text {
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .second-carousel {
@@ -76,7 +79,6 @@ button {
 .main-header {
   text-align: center;
   font-size: 2em;
-  padding-top: 20px;
   font-weight: bold;
 }
 
@@ -101,9 +103,10 @@ button {
 
 .my-work-div {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   padding: 40px;
+  gap: 16px;
 }
 
 .my-work-card {
@@ -177,12 +180,19 @@ h5 {
 }
 
 .my-work-card img {
-  z-index: 1;
   width: 100%;
-  object-fit: cover;
-  vertical-align: middle;
-  transform-origin: center;
-  pointer-events: none;
+  object-fit: contain;
+}
+
+.my-word-card-img {
+  width: 100%;
+  padding-top: 12px;
+  height: 250px;
+  border-radius: 16px;
+}
+
+.my-word-card-img img {
+  border-radius: 16px;
 }
 
 .second-carousel-card:last-child {
@@ -239,7 +249,7 @@ canvas {
 #bar {
   height: 10vh;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   border-bottom: 5px solid var(--first-color);
 }
 
@@ -346,6 +356,7 @@ canvas {
 .bar-sub {
   color: white;
   margin-top: 20px;
+  padding-left: 40px;
 }
 
 .bar-sub a {
@@ -551,15 +562,115 @@ textarea {
   align-items: center;
 }
 
+.card {
+  display: flex;
+  justify-content: space-between;
+  height: 600px;
+  max-width: 450px;
+  background-color: var(--first-color);
+  border-radius: 16px;
+  overflow: hidden;
+  color: white;
+  flex-direction: column;
+}
+
+.card-image {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: contain;
+}
+
+.card-content {
+  padding: 24px;
+  height: 100%;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-content h2 {
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.description {
+  font-size: 14px;
+  color: #ccc;
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+.tech-title {
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+.tech-list {
+  text-align: center;
+  font-size: 14px;
+  margin-bottom: 24px;
+}
+
+.section {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1.5rem;
+}
+
+.card-technology {
+  border: 1px solid var(--first-color);
+  border-radius: 1rem;
+  padding: 1.5rem 2rem;
+  max-width: 420px;
+  text-align: center;
+  color: white;
+}
+
+.card-technology h3 {
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+.card-technology p {
+  margin: 0;
+}
+
+@media (max-width: 768px) {
+  .card-technology {
+    width: 100%;
+    max-width: none;
+  }
+
+  .section {
+    padding-top: 20px;
+    padding-bottom: 40px;
+    padding-inline: 20px;
+  }
+}
+
 /* media querise */
 
 .black-btn {
+  cursor: pointer;
   background-color: rgb(21, 21, 21);
 }
 
 svg {
   width: 80%;
   height: 80%;
+}
+
+@media (max-width: 1500px) {
+  .card {
+    max-width: 350px;
+  }
 }
 
 @media (max-width: 1050px) {
@@ -577,6 +688,7 @@ svg {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
   }
   .my-work-card {
     margin-bottom: 40px;
